samples/_failures_safe/1761509526_65ed60_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b49684f.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_7b49684f.c:162:12: error: missing terminating " character
  162 |     printf("Data count: %
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_7b49684f.c:162:5: error: expected expression at end of input
  162 |     printf("Data count: %
      |     ^~~~~~
./samples/SAFE/__tmp_7b49684f.c:162:5: error: expected declaration or statement at end of input
